# probemate-web

./: .env.example  .gitignore  README.md  plan.md  plan2.md  方案.md
api/: .gitignore  pyproject.toml
api/app/: __init__.py  main.py
api/app/api/: routes.py
api/app/prompts/: candidate_generation_v0_1.md
api/app/repositories/: __init__.py  base.py  json_store.py  postgres_store.py
api/app/schemas/: __init__.py  models.py
api/app/services/: __init__.py  app_state.py  auth.py  candidate_generators.py  data_dictionary.py  demo_data.py  evidence_audit.py  experimental.py  export.py  governance.py  llm_client.py  pipeline.py  research.py  store.py  study_builder.py  templates.py
api/scripts/: import_json_store_to_postgres.py
api/tests/: conftest.py  test_api.py  test_gate.py
deliverables/probemate-teacher-review/: ProbeMate_当前状态与导师评审说明.md  screenshots.json
frontend/: components.json  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  proxy.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/[locale]/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/research/: page.tsx
frontend/app/teacher/: page.tsx
frontend/components/: app-shell.tsx  landing-three-scene.tsx  settings-quick-popover.tsx
frontend/i18n/: request.ts  routing.ts
frontend/lib/: api.ts  preferences.ts  types.ts
frontend/messages/: en.json  zh.json
frontend/scripts/: devtools-flow-test.cjs  playwright-flow-test.cjs
scripts/: run-api-deepseek.ps1  run-api-mock.ps1  run-api-openai.ps1
shared/: README.md
(+14 files in other folders)
