[project]
name = "probemate-api"
version = "1.1.0"
description = "ProbeMate FastAPI service for diagnostic gating MVP"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "psycopg[binary]>=3.2.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
